--- a/UPOSS/Views/AuthView.xaml
+++ b/UPOSS/Views/AuthView.xaml
@@ -71,7 +71,7 @@
 
                     <TextBlock Grid.Column="0" Text="Username : " VerticalAlignment="Center" />
 
-                    <TextBox x:Name="tbUsername" Grid.Column="1" Margin="20 0 0 0" Background="WhiteSmoke" FontSize="15" Text="{Binding InputUser.Username, Mode=TwoWay}"/>
+                    <TextBox x:Name="tbUsername" Grid.Column="1" Margin="20 0 0 0" Background="WhiteSmoke" FontSize="15" Text="{Binding InputUser.Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
 
                 <Grid Grid.Row="1" Margin="0 10">
