--- a/UPOSS/Views/SettingView.xaml
+++ b/UPOSS/Views/SettingView.xaml
@@ -106,7 +106,7 @@
                                             <Border Width="150" Padding="2" Background="white" BorderBrush="Black" BorderThickness="1" CornerRadius="6">
                                                 <TextBox Background="White" materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
                                                  HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                                 Text="{Binding Path=InputSetting.GovChargesName, Mode=TwoWay}"/>
+                                                 Text="{Binding Path=InputSetting.GovChargesName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                             </Border>
                                         </Viewbox>
                                     </WrapPanel>
@@ -119,7 +119,7 @@
                                                 <Border Width="50" Padding="2" Background="white" BorderBrush="Black" BorderThickness="1" CornerRadius="6">
                                                     <TextBox Background="White" materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
                                                  HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                                 Text="{Binding Path=InputSetting.GovChargesValue, Mode=TwoWay}"/>
+                                                 Text="{Binding Path=InputSetting.GovChargesValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                                 </Border>
                                                 <TextBlock Text="%" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5 0"/>
 
@@ -128,7 +128,7 @@
                                                     <Border Width="150" Padding="2" Background="white" BorderBrush="Black" BorderThickness="1" CornerRadius="6">
                                                         <TextBox x:Name="tbRegNo" Background="White" materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
                                                  HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                                 Text="{Binding Path=InputSetting.GovChargesNo, Mode=TwoWay}"/>
+                                                 Text="{Binding Path=InputSetting.GovChargesNo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                                     </Border>
 
                                                     <TextBlock IsHitTestVisible="False" Text="Registration No." VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="DarkGray">
@@ -183,7 +183,7 @@
                                             <Border Width="150" Padding="2" Background="white" BorderBrush="Black" BorderThickness="1" CornerRadius="6">
                                                 <TextBox Background="White" materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
                                                  HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                                 Text="{Binding Path=InputSetting.System_address, Mode=TwoWay}"/>
+                                                 Text="{Binding Path=InputSetting.System_address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                             </Border>
                                         </Viewbox>
                                     </WrapPanel>
@@ -221,7 +221,7 @@
                                             <Border Width="150" Padding="2" Background="white" BorderBrush="Black" BorderThickness="1" CornerRadius="6">
                                                 <TextBox Background="White" materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
                                                  HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                                 Text="{Binding Path=InputSetting.Phone_no, Mode=TwoWay}"/>
+                                                 Text="{Binding Path=InputSetting.Phone_no, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                             </Border>
                                         </Viewbox>
                                     </WrapPanel>
